--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "openai": "^4.73.1",
     "prettier": "^3.2.4",
     "slugify": "^1.6.6",
+    "sqlite3": "^5.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
